--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   backend:
     image: rooholazamani/lms-backend:v1.0.8
@@ -6,19 +5,17 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: lms-backend
-    ports:
-      - "8080:8080"
     volumes:
       - /root/data:/app/data
-      - /root//uploads:/app/uploads
+      - /root/uploads:/app/uploads
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SERVER_PORT=8080
       - JAVA_OPTS=-Xmx512m -Xms256m
-
     networks:
       - lms-network
     restart: unless-stopped
+    # backend را از بیرون در دسترس نیست
 
   frontend:
     image: rooholazamani/lms-frontend:v1.0.8
@@ -26,30 +23,27 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: lms-frontend
-    ports:
-      - "80:80"
     environment:
-    - NODE_ENV=production
+      - NODE_ENV=production
     networks:
       - lms-network
     restart: unless-stopped
+    # frontend را از بیرون در دسترس نیست
 
   nginx-proxy:
     image: nginx:alpine
     container_name: lms-proxy
     ports:
-      - "443:443"
+      - "80:80"  # تغییر از 443 به 80
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       - frontend
       - backend
     networks:
       - lms-network
     restart: unless-stopped
-    profiles:
-      - production
+    # حذف profiles برای اجرای همیشگی
 
 networks:
   lms-network:
