--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     container_name: lms-backend
     ports:
       - "8080:8080"
+    volumes:
+      - /root/data:/app/data
+      - /root/uploads:/app/uploads
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SERVER_PORT=8080
