--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - /root/data:/app/data
-      - /root/uploads:/app/uploads
+      - ./data:/app/data
+      - ./uploads:/app/uploads
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SERVER_PORT=8080
