--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - /opt/lms/data:/app/data
-      - /opt/lms/uploads:/app/uploads
+      - /srv/lms/data:/app/data
+      - /srv/lms/uploads:/app/uploads
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SERVER_PORT=8080
