--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - /srv/lms/data:/app/data
       - /srv/lms/uploads:/app/uploads
+      - ~/.m2:/root/.m2 
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SERVER_PORT=8080
